Add segment tracking

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     analytics.page();
     }}();
   </script>
+  <script>
+    analytics.page('Home');
+  </script>
 </head>
 <body>
 <div class="content-wrapper">
